--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.1/howler.js"></script>
 	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 	<script src ="js/sound board.js" type="text/paperscript" canvas= canvas></script>
-	<link rel="stylesheet" type="text/css" href="css/sound board/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 </head> 
 <body>
